syntax = "proto3";

option go_package = "github.com/cntechpower/anywhere/server_pb";

package anywhereRpc;

service AnywhereServer {
    rpc ListAgent(Empty)returns(Agents){}
    rpc AddProxyConfig(AddProxyConfigInput)returns(Empty){}
    rpc ListProxyConfigs(Empty)returns(ListProxyConfigsOutput){}
    rpc RemoveProxyConfig(RemoveProxyConfigInput)returns(Empty){}
    rpc LoadProxyConfigFile(Empty)returns(Empty){}
    rpc SaveProxyConfigToFile(Empty)returns(Empty){}
    rpc ListConnections(ListConnsInput)returns(Conns){}
    rpc KillConnById(KillConnByIdInput)returns(Empty){}
    rpc KillAllConnections(Empty)returns(Empty){}
    rpc UpdateProxyConfigWhiteList(UpdateProxyConfigWhiteListInput)returns(Empty){}
    rpc GetSummary(Empty)returns(GetSummaryOutput){}
}

message Empty{}

message Agent{
    string userName = 1;
    string zoneName = 2;
    string id = 3;
    string remoteAddr = 4;
    string lastAckRcv = 5;
    string lastAckSend = 6;
    int64 proxyConfigCount = 7;

}

message Agents{
    repeated Agent agent = 1;
}

message ProxyConfig{
    string username = 1;
    string zoneName = 2;
    int64 remotePort = 3;
    string localAddr = 4;
    bool isWhiteListOn = 5;
    string WhiteCidrList = 6;
    int64 NetworkFlowRemoteToLocalInBytes = 7;
    int64 NetworkFlowLocalToRemoteInBytes = 8;
    int64 ProxyConnectCount = 9;
    int64 ProxyConnectRejectCount = 10;

}

message AddProxyConfigInput{
    ProxyConfig Config = 1;
}


message ListProxyConfigsOutput{
    repeated ProxyConfig Config = 1;
}

message RemoveProxyConfigInput{
    int64 id = 1;
}

message ListConnsInput{
    string userName = 1;
    string zoneName = 2;
}

message Conn {
    string userName = 1;
    string zoneName = 2;
    string agentId = 3;
    int64 connId = 4;
    string srcRemoteAddr = 5;
    string srcLocalAddr = 6;
    string dstRemoteAddr = 7;
    string dstLocalAddr = 8;
}

message Conns{
    repeated Conn conn = 1;
}

message KillConnByIdInput {
    int64 id = 1;
}

message UpdateProxyConfigWhiteListInput {
    int64 id = 1;
    string userName = 2;
    string zoneName = 3;
    string localAddr = 4;
    string whiteCidrs = 5;
    bool whiteListEnable = 6;
    int64 remotePort = 7;

}
message GetSummaryOutput {
    int64 agentCount = 1;
    int64 proxyCount = 2;
    int64 currentProxyConnectionCount = 3;
    int64 proxyConnectCount = 4;
    int64 proxyNetFlowInBytes = 5;
    repeated ProxyConfig configNetFlowTop10  = 6;
    repeated ProxyConfig configConnectFailTop10  = 7;
    int64 adminWebUiAuthFailCount =8;
    int64 groupCount =9;
}
